--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ $(document).ready(function(){
 	        	
 	            var d = document.createElement('div');
 	            d.classList.add('medalArea');
+				d.classList.add('lv48');
 	            if (area.group) d.classList.add(area.group);
 	            d.style.left = x + 'px';
 	            d.style.top = y + 'px';
@@ -173,6 +174,7 @@ $(document).ready(function(){
 <div style="margin:10px 0px 10px 20px;">
 	<button id="clear" style="width:100px; height:30px;">초기화</button>
 	<button id="save" style="width:100px; height:30px;">저장</button>
+	
 </div>
 <div id="downloadImage">
 	<!-- 원본 -->
