update lv47 and bug fix

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ $(document).ready(function(){
 		if (area.groupBtn) {
 			var d = document.createElement('div');
 			d.classList.add('medalArea');
+			d.classList.add('lv48');
 			d.classList.add('groupBtn');
 			d.style.left = area.groupBtn.pos[0] + 'px';
 			d.style.top = area.groupBtn.pos[1] + 'px';
