--- a/popn48.html
+++ b/popn48.html
@@ -182,7 +182,7 @@ $(document).ready(function(){
 	<img id="target" class="target" src="img/48.png"/>
 </div>
 <ul class="contextmenu">
-	<li id="goldstar" data-badge="goldstar.png">금별</li>
+	<li id="goldstar" data-badge="goldstar.png"><img src="img/medal/goldstar.png" style="width=30px; height=30px;"/></li>
 	<li id="silverstar" data-badge="silverstar.png">은별</li>
 	<li id="silverspade" data-badge="silverspade.png">은다이아</li>
 	<li id="silvermedal" data-badge="silvermedal.png">은메달</li>
