--- a/popn48.html
+++ b/popn48.html
@@ -182,16 +182,16 @@ $(document).ready(function(){
 	<img id="target" class="target" src="img/48.png"/>
 </div>
 <ul class="contextmenu">
-	<li id="goldstar" data-badge="goldstar.png"><img src="img/medal/goldstar.png" style="width=30px; height=30px;"/></li>
-	<li id="silverstar" data-badge="silverstar.png">은별</li>
-	<li id="silverspade" data-badge="silverspade.png">은다이아</li>
-	<li id="silvermedal" data-badge="silvermedal.png">은메달</li>
-	<li id="star" data-badge="star.png">동별</li>
-	<li id="spade" data-badge="spade.png">동다이아</li>
-	<li id="medal" data-badge="medal.png">동메달</li>
-	<li id="blackstar" data-badge="blackstar.png">흑별</li>
-	<li id="blackspade" data-badge="blackspade.png">흑다이아</li>
-	<li id="blackmedal" data-badge="blackmedal.png">흑메달</li>
+	<li id="goldstar" data-badge="goldstar.png"><img src="img/medal/goldstar.png" style="width=20px; height=20px;"/></li>
+	<li id="silverstar" data-badge="silverstar.png"><img src="img/medal/silverstar.png" style="width=20px; height=20px;"/</li>
+	<li id="silverspade" data-badge="silverspade.png"><img src="img/medal/silverspade.png" style="width=20px; height=20px;"/</li>
+	<li id="silvermedal" data-badge="silvermedal.png"><img src="img/medal/silvermedal.png" style="width=20px; height=20px;"/</li>
+	<li id="star" data-badge="star.png"><img src="img/medal/star.png" style="width=20px; height=20px;"/</li>
+	<li id="spade" data-badge="spade.png"><img src="img/medal/spade.png" style="width=20px; height=20px;"/</li>
+	<li id="medal" data-badge="medal.png"><img src="img/medal/medal.png" style="width=20px; height=20px;"/</li>
+	<li id="blackstar" data-badge="blackstar.png"><img src="img/medal/blackstar.png" style="width=20px; height=20px;"/</li>
+	<li id="blackspade" data-badge="blackspade.png"><img src="img/medal/blackspade.png" style="width=20px; height=20px;"/</li>
+	<li id="blackmedal" data-badge="blackmedal.png"><img src="img/medal/blackmedal.png" style="width=20px; height=20px;"/</li>
 	<li id="none" data-badge="none.gif">없음</li>
 </ul>
 </body>
