--- a/popn48.html
+++ b/popn48.html
@@ -182,7 +182,7 @@ $(document).ready(function(){
 	<img id="target" class="target" src="img/48.png"/>
 </div>
 <ul class="contextmenu">
-	<li id="goldstar" data-badge="goldstar.png"><img src="img/medal/goldstar.png" style="width:30px; height:30px;"/></li>
+	<li><img id="goldstar" data-badge="goldstar.png" src="img/medal/goldstar.png" style="width:30px; height:30px;"/></li>
 	<ul class="horizontal">
 		<li id="silverstar" data-badge="silverstar.png"><img src="img/medal/silverstar.png" style="width:30px; height:30px;"/</li>
 		<li id="silverspade" data-badge="silverspade.png"><img src="img/medal/silverspade.png" style="width:30px; height:30px;"/</li>
