--- a/popn48.html
+++ b/popn48.html
@@ -184,19 +184,19 @@ $(document).ready(function(){
 <ul class="contextmenu">
 	<li><img id="goldstar" data-badge="goldstar.png" src="img/medal/goldstar.png" style="width:30px; height:30px;"/></li>
 	<ul class="horizontal">
-		<li id="silverstar" data-badge="silverstar.png"><img src="img/medal/silverstar.png" style="width:30px; height:30px;"/</li>
-		<li id="silverspade" data-badge="silverspade.png"><img src="img/medal/silverspade.png" style="width:30px; height:30px;"/</li>
-		<li id="silvermedal" data-badge="silvermedal.png"><img src="img/medal/silvermedal.png" style="width:30px; height:30px;"/</li>
+		<li><img id="silverstar" data-badge="silverstar.png" src="img/medal/silverstar.png" style="width:30px; height:30px;"/</li>
+		<li><img id="silverspade" data-badge="silverspade.png" src="img/medal/silverspade.png" style="width:30px; height:30px;"/</li>
+		<li><img id="silvermedal" data-badge="silvermedal.png" src="img/medal/silvermedal.png" style="width:30px; height:30px;"/</li>
 	</ul>
 	<ul class="horizontal">
-		<li id="star" data-badge="star.png"><img src="img/medal/star.png" style="width:30px; height:30px;"/</li>
-		<li id="spade" data-badge="spade.png"><img src="img/medal/spade.png" style="width:30px; height:30px;"/</li>
-		<li id="medal" data-badge="medal.png"><img src="img/medal/medal.png" style="width:30px; height:30px;"/</li>
+		<li><img id="star" data-badge="star.png" src="img/medal/star.png" style="width:30px; height:30px;"/</li>
+		<li><img id="spade" data-badge="spade.png" src="img/medal/spade.png" style="width:30px; height:30px;"/</li>
+		<li><img id="medal" data-badge="medal.png" src="img/medal/medal.png" style="width:30px; height:30px;"/</li>
 	</ul>
 	<ul class="horizontal">
-		<li id="blackstar" data-badge="blackstar.png"><img src="img/medal/blackstar.png" style="width:30px; height:30px;"/</li>
-		<li id="blackspade" data-badge="blackspade.png"><img src="img/medal/blackspade.png" style="width:30px; height:30px;"/</li>
-		<li id="blackmedal" data-badge="blackmedal.png"><img src="img/medal/blackmedal.png" style="width:30px; height:30px;"/</li>
+		<li><img id="blackstar" data-badge="blackstar.png" src="img/medal/blackstar.png" style="width:30px; height:30px;"/</li>
+		<li><img id="blackspade" data-badge="blackspade.png" src="img/medal/blackspade.png" style="width:30px; height:30px;"/</li>
+		<li><img id="blackmedal" data-badge="blackmedal.png" src="img/medal/blackmedal.png" style="width:30px; height:30px;"/</li>
 	</ul>
 	<li id="none" data-badge="none.gif">없음</li>
 </ul>
