--- a/popn48.html
+++ b/popn48.html
@@ -124,6 +124,7 @@ $(document).ready(function(){
 	
 	
 	function contextMenuClicked(e) {
+		console.log(e.target.id, e.target.getAttribute('data-badge'));
 		var id = e.target.id;
 		var badge = e.target.getAttribute('data-badge');
 		switch (id) {
@@ -182,21 +183,21 @@ $(document).ready(function(){
 	<img id="target" class="target" src="img/48.png"/>
 </div>
 <ul class="contextmenu">
-	<li><img id="goldstar" data-badge="goldstar.png" src="img/medal/goldstar.png" style="width:30px; height:30px;"/></li>
+	<li id="goldstar" data-badge="goldstar.png"><img id="goldstar" data-badge="goldstar.png" src="img/medal/goldstar.png" style="width:30px; height:30px;"/></li>
 	<ul class="horizontal">
-		<li><img id="silverstar" data-badge="silverstar.png" src="img/medal/silverstar.png" style="width:30px; height:30px;"/</li>
-		<li><img id="silverspade" data-badge="silverspade.png" src="img/medal/silverspade.png" style="width:30px; height:30px;"/</li>
-		<li><img id="silvermedal" data-badge="silvermedal.png" src="img/medal/silvermedal.png" style="width:30px; height:30px;"/</li>
+		<li id="silverstar" data-badge="silverstar.png"><img id="silverstar" data-badge="silverstar.png" src="img/medal/silverstar.png" style="width:30px; height:30px;"/</li>
+		<li id="silverspade" data-badge="silverspade.png"><img id="silverspade" data-badge="silverspade.png" src="img/medal/silverspade.png" style="width:30px; height:30px;"/</li>
+		<li id="silvermedal" data-badge="silvermedal.png"><img id="silvermedal" data-badge="silvermedal.png" src="img/medal/silvermedal.png" style="width:30px; height:30px;"/</li>
 	</ul>
 	<ul class="horizontal">
-		<li><img id="star" data-badge="star.png" src="img/medal/star.png" style="width:30px; height:30px;"/</li>
-		<li><img id="spade" data-badge="spade.png" src="img/medal/spade.png" style="width:30px; height:30px;"/</li>
-		<li><img id="medal" data-badge="medal.png" src="img/medal/medal.png" style="width:30px; height:30px;"/</li>
+		<li id="star" data-badge="star.png"><img id="star" data-badge="star.png" src="img/medal/star.png" style="width:30px; height:30px;"/</li>
+		<li id="spade" data-badge="spade.png"><img id="spade" data-badge="spade.png" src="img/medal/spade.png" style="width:30px; height:30px;"/</li>
+		<li id="medal" data-badge="medal.png"><img id="medal" data-badge="medal.png" src="img/medal/medal.png" style="width:30px; height:30px;"/</li>
 	</ul>
 	<ul class="horizontal">
-		<li><img id="blackstar" data-badge="blackstar.png" src="img/medal/blackstar.png" style="width:30px; height:30px;"/</li>
-		<li><img id="blackspade" data-badge="blackspade.png" src="img/medal/blackspade.png" style="width:30px; height:30px;"/</li>
-		<li><img id="blackmedal" data-badge="blackmedal.png" src="img/medal/blackmedal.png" style="width:30px; height:30px;"/</li>
+		<li id="blackstar" data-badge="blackstar.png"><img id="blackstar" data-badge="blackstar.png" src="img/medal/blackstar.png" style="width:30px; height:30px;"/</li>
+		<li id="blackspade" data-badge="blackspade.png"><img id="blackspade" data-badge="blackspade.png" src="img/medal/blackspade.png" style="width:30px; height:30px;"/</li>
+		<li id="blackmedal" data-badge="blackmedal.png"><img id="blackmedal" data-badge="blackmedal.png" src="img/medal/blackmedal.png" style="width:30px; height:30px;"/</li>
 	</ul>
 	<li id="none" data-badge="none.gif">없음</li>
 </ul>
