--- a/popn48.html
+++ b/popn48.html
@@ -152,6 +152,7 @@ $(document).ready(function(){
 	}
 	
 	$(".contextmenu > li").click(contextMenuClicked);
+	$(".contextmenu > .horizontal > li").click(contextMenuClicked);
 	
 	$("#save").click(function() {
 		const captureDiv = document.getElementById('downloadImage');
